# BrainpanShellGen

./: README.md
CMake/: CMakeLists.txt
headers/: arguments.h  exploit.h  options.h  printers.h
src/: exploit.cpp  init.cpp  source.cpp
